--- a/src/two.html
+++ b/src/two.html
@@ -10,6 +10,9 @@
              width: 100px;
             background-color: aqua;
             border-radius: 100px ;
+            display: flex;
+            justify-content: center;
+justify-items: center;
         }
     </style>
 </head>
@@ -22,7 +25,7 @@
         
     </ol>
     <div>
-new things
+        something new 
     </div>
 </body>
 </html>
